# SO2JS

./: Cargo.toml  README.md  TODO.md
.cargo/: config.toml
example/: Cargo.toml  main.rs
so2js/: Cargo.toml  lib.rs
so2js/common/: macros.rs  mod.rs  options.rs  unicode_property.rs  varint.rs  wtf_8.rs
so2js/common/icu_data/: mod.rs
so2js/parser/: lexer.rs  lexer_stream.rs  parse_error.rs  parser.rs  printer.rs  regexp_parser.rs  scope_tree.rs  source.rs
so2js/runtime/: abstract_operations.rs  accessor.rs  alloc_error.rs  annex_b.rs  arguments_object.rs  array_object.rs  array_properties.rs  async_generator_object.rs  bound_function_object.rs  boxed_value.rs  builtin_function.rs  builtin_names.rs  class_names.rs  console.rs  context.rs  debug_print.rs  error.rs  eval_result.rs  for_in_iterator.rs  function.rs  gc_object.rs  generator_object.rs  global_names.rs  heap_item_descriptor.rs  interned_strings.rs  iterator.rs  mod.rs  numeric_operations.rs  object_value.rs  ordinary_object.rs  promise_object.rs  property.rs  property_descriptor.rs  property_key.rs  proxy_object.rs  realm.rs  rust_vtables.rs  scope.rs  scope_names.rs  source_file.rs  (+8 more)
so2js/runtime/bytecode/: constant_table.rs  constant_table_builder.rs  exception_handlers.rs  function.rs  generator.rs  instruction.rs  source_map.rs  stack_frame.rs  vm.rs  width.rs
so2js/runtime/collections/: array.rs  hash_map.rs  hash_set.rs  index_map.rs  index_set.rs  inline_array.rs  vec.rs
so2js/runtime/eval/: create_dynamic_function.rs  eval.rs  expression.rs
so2js/runtime/gc/: garbage_collector.rs  handle.rs  heap.rs  heap_item.rs  heap_trait_object.rs  heap_visitor.rs  mod.rs  pointer.rs
so2js/runtime/intrinsics/: aggregate_error_constructor.rs  aggregate_error_prototype.rs  array_buffer_constructor.rs  array_buffer_prototype.rs  array_constructor.rs  array_iterator.rs  array_prototype.rs  async_from_sync_iterator_prototype.rs  async_function_constructor.rs  async_function_prototype.rs  async_generator_function_constructor.rs  async_generator_function_prototype.rs  async_generator_prototype.rs  async_iterator_prototype.rs  bigint_constructor.rs  bigint_prototype.rs  boolean_constructor.rs  boolean_prototype.rs  data_view_constructor.rs  data_view_prototype.rs  date_constructor.rs  date_object.rs  date_prototype.rs  error_constructor.rs  error_prototype.rs  finalization_registry_constructor.rs  finalization_registry_object.rs  finalization_registry_prototype.rs  function_constructor.rs  function_prototype.rs  generator_function_constructor.rs  generator_function_prototype.rs  generator_prototype.rs  global_object.rs  intrinsics.rs  iterator_constructor.rs  iterator_helper_object.rs  iterator_helper_prototype.rs  iterator_prototype.rs  json_object.rs  (+39 more)
so2js/runtime/module/: execute.rs  import_attributes.rs  linker.rs  loader.rs  module.rs  module_namespace_object.rs  source_text_module.rs  synthetic_module.rs
so2js/runtime/regexp/: compiled_regexp.rs  compiler.rs  matcher.rs
so2js/runtime/stack/: handle.rs  mod.rs
so2js/sys/: mod.rs
so2js_benches/: Cargo.toml  README.md  benches.rs
so2js_gc/: Cargo.toml  TODO.md
so2js_icu_collections/: build.rs
so2js_macros/: Cargo.toml
so2js_tests/: Cargo.toml  README.md  snapshot_tests.rs
so2js_tests/harness/: Cargo.toml
so2js_tests/harness/src/: ignored.rs  index.rs  runner.rs  table.rs  utils.rs
src/: Cargo.toml  main.rs
src/benches/: benches.rs
src/brimstone_icu_collections/: Cargo.toml  build.rs
src/brimstone_icu_collections/src/: lib.rs
src/brimstone_serialized_heap/: build.rs
src/js/: Cargo.toml
src/js/common/: error.rs  icu.rs  jsalloc.rs  math.rs  memory.rs  mod.rs  options.rs  serialized_heap.rs  string_iterators.rs  time.rs  unicode.rs
src/js/parser/: analyze.rs  ast.rs  ast_visitor.rs  context.rs  lexer.rs  loc.rs  parse_error.rs  parser.rs  regexp_parser.rs  token.rs
src/js/runtime/: abstract_operations.rs  accessor.rs  arguments_object.rs  array_object.rs  async_generator_object.rs  bound_function_object.rs  boxed_value.rs  builtin_function.rs  console.rs  context.rs  error.rs  gc_object.rs  generator_object.rs  global_names.rs  iterator.rs  property.rs  proxy_object.rs  realm.rs  rust_vtables.rs  scope.rs  stack_trace.rs  string_object.rs  string_parsing.rs  string_value.rs  tasks.rs  test_262_object.rs  type_utilities.rs  value.rs
src/js/runtime/bytecode/: constant_table.rs  constant_table_builder.rs  function.rs  generator.rs  instruction_traits.rs  operand.rs  source_map.rs  writer.rs
src/js/runtime/collections/: hash_set.rs  index_map.rs  index_set.rs
src/js/runtime/eval/: create_dynamic_function.rs  eval.rs  expression.rs
src/js/runtime/gc/: heap.rs  heap_serializer.rs  heap_visitor.rs
src/js/runtime/intrinsics/: aggregate_error_prototype.rs  array_buffer_constructor.rs  array_constructor.rs  array_iterator.rs  array_prototype.rs  async_from_sync_iterator_prototype.rs  async_function_prototype.rs  async_generator_function_prototype.rs  data_view_constructor.rs  date_object.rs  date_prototype.rs  error_constructor.rs  finalization_registry_object.rs  function_prototype.rs  generator_function_prototype.rs  generator_prototype.rs  global_object.rs  iterator_helper_object.rs  map_iterator.rs  map_prototype.rs  math_object.rs  number_constructor.rs  object_prototype.rs  promise_constructor.rs  promise_prototype.rs  reflect_object.rs  regexp_constructor.rs  regexp_string_iterator.rs  rust_runtime.rs  set_prototype.rs  string_constructor.rs  string_iterator.rs  typed_array.rs  typed_array_constructor.rs  typed_array_prototype.rs  weak_map_prototype.rs  weak_ref_prototype.rs
src/js/runtime/module/: execute.rs  import_attributes.rs  linker.rs  loader.rs  module_namespace_object.rs
src/js/runtime/regexp/: compiled_regexp.rs  compiler.rs  instruction.rs
src/js/sys/: mod.rs
src/so2js_icu_collections/: Cargo.toml  build.rs
src/so2js_macros/src/: match_u32.rs
tests/: Cargo.toml  (+1 more)
tests/fuzz/: Cargo.toml  run.sh
tests/fuzz/src/: main.rs
tests/harness/: Cargo.toml
tests/harness/src/: main.rs  runner.rs
(+12 files in other folders)
