[workspace]
members = [
  "example",
  # core members
  "so2js_icu_collections",
  "so2js_macros",
  "so2js_gc",
  "so2js",
  # tests
  "so2js_tests",
  "so2js_tests/fuzz",
  "so2js_tests/harness",
]
resolver = "2"

[workspace.package]
edition = "2018"
version = "0.1.0"
authors = [
  "lemonhx <lemonhx@lemonhx.moe>",
  "hanshalverson <hansghalverson@gmail.com>",
]

[workspace.dependencies]
# Internal Crates
so2js = { path = "so2js" }
so2js_gc = { path = "so2js_gc" }
so2js_icu_collections = { path = "so2js_icu_collections" }
so2js_macros = { path = "so2js_macros" }


# External Crates
oxc = { version = "0.105.0", features = [] }
parking_lot = "0.12.1"
once_cell = "1.21.3"
tracing = "0.1.37"

allocator-api2 = "0.2.21"
bitflags = "2.10.0"
bumpalo = "3.19.0"
clap = "4.5.53"
criterion = "0.8.1"
half = "2.7.1"
hashbrown = "0.16.1"
indexmap-allocator-api = { git = 'https://github.com/Hans-Halverson/indexmap-allocator-api.git' }
num-bigint = "0.4.3"
num-traits = "0.2.16"
quote = "1.0.42"
rand = "0.9.2"
regex = "1.12.2"
ryu-js = "1.0.2"
serde = "1.0.152"
serde_json = "1.0.147"
supports-color = "3.0.2"
syn = "2.0.111"
threadpool = "1.8.1"
yaml-rust = "0.4.4"

# ICU4X crates must all be the same version
icu_casemap = "2.1.1"
icu_collator = "2.1.1"
icu_collections = "2.1.1"
icu_locale = "2.1.1"
icu_normalizer = "2.1.1"
icu_properties = { version = "2.1.1", features = ["alloc"] }
icu_provider = "2.1.1"
icu_provider_baked = "2.1.1"
icu_provider_adapters = "2.1.1"
zerotrie = "0.2.3"
zerovec = "0.11.3"

[workspace.lints.clippy]
collapsible_else_if = "allow"
collapsible_if = "allow"
comparison_chain = "allow"
len_without_is_empty = "allow"
mutable_key_type = "allow"
new_ret_no_self = "allow"
new_without_default = "allow"
too_many_arguments = "allow"
