[package]
name = "so2js"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
doctest = false
path = "lib.rs"

[dependencies]
allocator-api2.workspace = true
bumpalo = { workspace = true, features = ["allocator-api2"] }
bitflags.workspace = true
half.workspace = true
hashbrown.workspace = true
indexmap-allocator-api.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
ryu-js.workspace = true
parking_lot.workspace = true
oxc = { workspace = true, features = [] }
once_cell.workspace = true
so2js_gc.workspace = true
# Internal crates
so2js_icu_collections.workspace = true
so2js_macros.workspace = true

# ICU4X crates must all be the same version
icu_casemap.workspace = true
icu_collator.workspace = true
icu_collections.workspace = true
icu_locale.workspace = true
icu_normalizer.workspace = true
icu_properties = { workspace = true, features = [] }
icu_provider = { workspace = true, features = ["sync"] }
icu_provider_baked.workspace = true
icu_provider_adapters.workspace = true

zerotrie.workspace = true
zerovec.workspace = true

[features]
default = ["nightly", "handle_stats", "alloc_error", "annex_b"]
# Enable Annex B extensions by default
annex_b = []
# Collect handle use statistics
handle_stats = []
# Return allocation errors instead of panicking
alloc_error = []
# Enable features only available on nightly (e.g. never_type)
nightly = []

# Run the garbage collector in stress test mode
gc_stress_test = []

[lints]
workspace = true
