[package]
name = "brimstone"
version.workspace = true
authors.workspace = true
edition.workspace = true
default-run = "bs"

[[bin]]
name = "bs"
path = "main.rs"

[dependencies]
bitflags.workspace = true
clap = { workspace = true, features = ["derive"] }

brimstone_core.workspace = true
brimstone_serialized_heap.workspace = true
parking_lot.workspace = true
once_cell.workspace = true

[dev-dependencies]
criterion.workspace = true

[features]
default = ["alloc_error", "annex_b"]
# Enable Annex B extensions by default
annex_b = ["brimstone_core/annex_b"]
# Collect handle use statistics
handle_stats = ["brimstone_core/handle_stats"]
# Return allocation errors instead of panicking
alloc_error = ["brimstone_core/alloc_error"]


# Run the garbage collector in stress test mode
gc_stress_test = ["brimstone_core/gc_stress_test"]

[lints]
workspace = true

[[bench]]
name = "benches"
harness = false
