[package]
name = "so2js_fuzz"
version.workspace = true
authors.workspace = true
edition.workspace = true

[[bin]]
name = "so2js_fuzz"
# Hack to not build this binary unless specifically requested
required-features = ["build_fuzz"]

[dependencies]
so2js_core.workspace = true

[features]
default = ["alloc_error"]
build_fuzz = []
alloc_error = ["so2js_core/alloc_error"]
